<resources>
    <string name="app_name">GroomVer</string>

    <string name="Join_account">Регистрация</string>
    <string name="Entrance">Вход</string>

    <string name="Login">E-mail</string>
    <string name="Password">Пароль</string>
    <string name="Forget_password">Забыли пароль?</string>
    <string name="Enter">Войти</string>
    <string name="Register">Зарегистрироваться</string>
    <string name="Name_user">Имя пользователя</string>
    <string name="Create_password">Придумайте пароль</string>
    <string name="Repeat_password">Повторите пароль</string>
    <string name="Alert_create_account">Создание аккаунта</string>
    <string name="Alert_please_wait">Пожалуйста, подождите...</string>
    <string name="Create_accout_complite">Аккаунт успешно создан</string>
    <string name="Error">Ошибка</string>
    <string name="Enter_Email">Заполните "Email"</string>
    <string name="Enter_User_Name">Придумайте Имя пользователя</string>
    <string name="Enter_Create_Password">Заполните "Придумайте пароль"</string>
    <string name="Password_uncorrect">Пароли не совпадают</string>
    <string name="Enter_Password">Введите пароль</string>
    <string name="Not_new_user_name">Пользователь с таким именем уже существует</string>
    <string name="Not_New_Email">Пользователь с такой почтой уже существует</string>

    <string name="Weak_Password">Пароль должен содержать как минимум 6 символов</string>
    <string name="Undefined_Error">Неизвестная ошибка</string>
    <string name="Invalid_Email">Некорректный Email</string>
    <string name="Incorrect_Email_Or_Password">Некорректный Email или пароль</string>

    <string name="I_Dont_Have_Account">У меня нет аккаунта</string>
    <string name="I_Have_Account">У меня есть аккаунт</string>

    <string name="Password_Recovery">Восстановление пароля</string>
    <string name="Send_An_Email">Отправить письмо</string>

    <!-- Bottom Navigation View-->
    <string name="Home">Главная</string>
    <string name="Search">Поиск</string>
    <string name="Add">Добавить</string>
    <string name="Messages">Сообщения</string>
    <string name="Profile">Профиль</string>

    <!-- Profile-->
    <string name="Select_A_Photo_From_The_Gallery">Выберите фотографию из галереи</string>
    <string name="Edit_A_Profile">Редактировать профиль</string>
    <string name="Favourites">Мои избранные</string>
    <string name="Ads">Мои объявления</string>
    <string name="Exit">Выход из аккаунта</string>
    <string name="My_ads">На данный момент вы не опубликовали ни одного объявления</string>
    <string name="Language">Қаз | Рус</string>

    <string name="Email">Почта</string>


    <!--Add-->
    <string name="Name_product">Название товара</string>
    <string name="Description_product">Описание товара</string>
    <string name="Price_product">Цена товара</string>
    <string name="City">Город</string>
    <string name="Back">Назад</string>
    <string name="Publish">Опубликовать</string>
    <string name="Add_Photo">Добавить фотографию</string>


    <string name="Product_publish">Продукт опубликован</string>
    <string name="Error_product_publish">Ошибка при публикации продукта</string>


    <string name="Write_A_Message">Написать сообщение</string>
    <string name="User_message">Сообщение пользователя</string>
    <string name="My_message">Мое сообщение</string>
    <string name="Send">Отправить</string>
    <string name="Message">Сообщение</string>

    <string name="Data">Дата создания:</string>

    <string name="Wellcome_Main">Добро пожаловать в GroomVer</string>


    <string name="Instructions_For_Password_Reset_Have_Been_Sent_To_Your_Email">
        Инструкции по сбросу пароля отправлены на ваш email</string>
    <string name="An_Error_Occurred_When_Sending_Instructions_To_Reset_The_Password_Please_Try_Again.">
        Ошибка при отправке инструкций по сбросу пароля. Пожалуйста, попробуйте еще раз</string>


    <!--AlertDialog-->
    <string name="Delete_Ad">Удаление объявления</string>
    <string name="Are_You_Sure_You_Want_To_Delete_This_Ad">Вы уверены, что хотите удалить это объявление?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>


    <!--The rest-->
    <string name="Today">Сегодня</string>
    <string name="Its_Still_Empty_Here">Здесь пока пусто.</string>
    <string name="You_dont_Have_Anything_In_Your_Favorites.">У вас нет ничего в Избранном.</string>
</resources>
