<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/tv_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:text="@string/Name_product" />

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:text="@string/Description_product" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:text="@string/Price_product" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:paddingStart="8dp"
                android:text="@string/Name_user" />

            <Button
                android:id="@+id/btn_write"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_button_purple"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_baseline_chat_24"
                android:gravity="center"
                android:contentDescription="@string/Write_A_Message" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
