
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Name_user"

        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_profile" />

    <TextView
        android:id="@+id/textview_userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_userName" />

    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/Edit_A_Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_userName" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/button_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/textview_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rating"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/textview_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Favourites"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@id/textview_rating"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/textview_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ads"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@id/textview_favorites"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="@string/Exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />
</androidx.constraintlayout.widget.ConstraintLayout>
