<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name_product"
        android:padding="20sp"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProduct" />


    <EditText
        android:id="@+id/etDescriptionProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etProductName"
        android:hint="@string/Description_product"
        android:padding="20sp"
        android:layout_marginTop="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProductName" />

    <EditText
        android:id="@+id/etProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDescriptionProduct"
        android:hint="@string/Price_product"
        android:inputType="numberDecimal"
        android:padding="20sp"
        app:layout_goneMarginTop="15sp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescriptionProduct" />

    <Button
        android:id="@+id/bPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etProductPrice"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/etProductPrice"
        android:text="@string/Publish"
        android:textSize="20dp"
        android:layout_marginTop="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProductPrice" />
</androidx.constraintlayout.widget.ConstraintLayout>
